bg witdth fix no overflows anymore

--- a/src/0.2/less/index.less
+++ b/src/0.2/less/index.less
@@ -4,7 +4,6 @@ html,body {
   width: 100%;
   height: 100%;
   font-family: monospace;
-  overflow-x: hidden;
 }
 
 @import './screen.less';
